# Poker-Game

./: docker-compose.yml
Backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  test_main.py
Backend/app/: database.py
Backend/app/action/: action.py  allin.py  bet.py  burn.py  call.py  check.py  deal.py  fold.py  rraise.py
Backend/app/core/: common_game.py  history_query.py
Backend/app/dtos/: action.py  hand.py  params.py  response_interface.py
Backend/app/exceptions/: game_exception.py
Backend/app/middlware/: cors.py
Backend/app/models/: action.py  hand.py  history.py
Backend/app/repositories/: action.py  base.py  hand.py  history.py
Backend/app/routes/: action.py  history.py
Backend/app/service/: action.py  hand.py  history.py  over.py  start.py
Backend/app/sql_scripts/: init.sql
Backend/app/utils/: action_type.py  game_state.py  game_utils.py
frontend/: dockerfile  package-lock.json  package.json
frontend/app/: HandHistoryCard.tsx  LeftComponent.tsx  RightComponent.tsx  globals.css  incremental_button.tsx  layout.tsx  page.tsx  provider.tsx
frontend/server/: api-client.ts
frontend/store/: create-async-thunk.ts  hooks.ts  store.ts
frontend/store/features/: action-slice.ts  history-slice.ts  start-slice.ts
frontend/utils/: action.ts  action_to_string_converter.ts  cards.ts  winnings.ts
frontend_test/: .gitignore  Dockerfile  package-lock.json  package.json
frontend_test/tests/: api_tests.spec.ts  interactive_tests.spec.ts  not_start_test.spec.ts  start_test.spec.ts
